<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data class="LaunchFragmentBinding"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/content_padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_icon_community"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/launch_title"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="@dimen/content_margin"
                android:layout_marginEnd="@dimen/content_margin"
                android:layout_marginStart="@dimen/content_margin"
                android:text="@string/launch_paragraph" />
            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="@dimen/content_margin"
                android:textStyle="bold"
                android:text="@string/launch_paragraph_2" />
            <Button
                android:id="@+id/launch_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="@dimen/content_margin"
                android:background="@color/colorPrimary"
                android:text="@string/launch_button_text"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/content_margin"
                android:layout_marginEnd="@dimen/content_margin"
                android:layout_marginStart="@dimen/content_margin"
                android:gravity="center"
                android:text="@string/launch_data_info"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
