<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data class="EnableBluetoothFragmentBinding"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            android:padding="@dimen/content_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/content_margin"
                android:text="@string/step_three"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/get_started_turn_on"
                android:layout_marginStart="@dimen/content_margin"
                android:layout_marginEnd="@dimen/content_margin"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/content_margin"
                android:text="@string/enable_bluetooth_paragraph" />

            <Button
                android:id="@+id/button_continue"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="@dimen/content_margin"
                android:background="@color/colorPrimary"
                android:text="@string/button_understand"
                android:textColor="@android:color/white" />

            <ProgressBar
                android:id="@+id/progressBar3"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>