<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data class="OTPEntryFragmentBinding">
        <variable
            name="signUpViewModel"
            type="com.identos.contracing.ui.SignUpViewModel" />
        <import type="android.text.TextUtils" />
        <import type="com.identos.contracing.ui.util.StateData.DataStatus"/>
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            android:padding="@dimen/content_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/content_margin"
                android:text="@string/step_two"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/enter_otp"
                android:layout_marginStart="@dimen/content_margin"
                android:layout_marginEnd="@dimen/content_margin"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/content_margin"
                android:text="@string/enter_otp_paragraph" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/otpEntry"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:text="@={signUpViewModel.otp}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/content_margin"
                    android:layout_marginEnd="@dimen/content_margin"
                    android:hint="@string/otp"
                    android:inputType="number"
                    android:enabled="@{signUpViewModel.confirmRegistrationLiveData.status != DataStatus.LOADING}"/>/>
            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyle"
                android:layout_marginTop="@dimen/content_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{signUpViewModel.confirmRegistrationLiveData.status == DataStatus.LOADING ? View.VISIBLE : View.GONE }"/>
            <Button
                android:id="@+id/button_continue"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="@dimen/content_margin"
                android:background="@color/colorPrimary"
                android:text="@string/button_continue"
                android:textColor="@android:color/white"
                android:enabled="@{!TextUtils.isEmpty(signUpViewModel.otp) &amp;&amp; signUpViewModel.confirmRegistrationLiveData.status != DataStatus.LOADING}"
                android:visibility="@{signUpViewModel.confirmRegistrationLiveData.status == DataStatus.LOADING ? View.GONE : View.VISIBLE }"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>