<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bluetooth_off_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/double_padding"
        tools:showIn="@layout/activity_home">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/content_margin"
            android:layout_marginEnd="@dimen/content_margin"
            android:layout_marginBottom="@dimen/content_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/titleView"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/ic_icon_alert"
            android:contentDescription="@string/bluetooth_off_image" />

        <TextView
            android:id="@+id/titleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/bluetooth_off_title"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/content_margin"
            android:layout_marginEnd="@dimen/content_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:layout_constraintBottom_toTopOf="@id/textView" />

        <TextView
            android:id="@+id/textView"
            android:layout_margin="@dimen/content_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="@dimen/content_margin"
            android:layout_marginEnd="@dimen/content_margin"
            android:text="@string/bluetooth_off_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/content_margin"
            android:layout_marginEnd="@dimen/content_margin"
            android:background="@color/colorPrimary"
            android:text="@string/turn_on_bluetooth"
            app:cornerRadius="5dp"
            app:layout_constraintTop_toBottomOf="@id/textView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>